[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["rollurioari <rollurioari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
imap-tools = "^1.6.0"
selenium-stealth = "^1.0.6"
fake-useragent = "^1.5.1"
undetected-chromedriver = "^3.5.5"
bs4 = "^0.0.2"
requests = "^2.31.0"
lxml = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
